# KF_Agent_New

./: .env.pypi  .env.pypi.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
kf_agent/: __init__.py  main.py
kf_agent/api/: win_control_picker.py  win_overlay_highlight.py  win_region_capture.py
kf_agent/api/routes/: config_editor.py  customer_service.py  editor_tools.py  resource_library.py
kf_agent/config/: __init__.py  settings.py
kf_agent/core/: engine.py  models.py  service.py
kf_agent/drivers/: __init__.py  base.py  image_click.py  win_automation.py
kf_agent/static/editor/: editor.css  editor.js  index.html
kf_agent/storage/: platform_config.py  resource_library.py
scripts/: download_docs_assets.py  publish_to_pypi.py  publish_via_scp.sh
static/editor/: editor.css  editor.js  index.html
